[gd_scene load_steps=2 format=3 uid="uid://debug_panel"]

[ext_resource type="Script" path="res://ui/debug_panel.gd" id="1_debug"]

[node name="DebugPanel" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 0
mouse_filter = 1
script = ExtResource("1_debug")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 220.0
grow_horizontal = 0
mouse_filter = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Debug Controls"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="KillPlayer" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Kill Player"

[node name="EatFish" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Eat Fish"

[node name="DamagePlayer" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Damage Player"

[node name="ToggleHunger" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Toggle Fish Hunger" 